Fix clipping bottom miscalculation

--- a/app/styles/_hex.sass
+++ b/app/styles/_hex.sass
@@ -41,10 +41,10 @@
     border-right: 52px solid $background-color
     z-index: 5
   &:after
+    border-top-color: transparent
     border-left: 52px solid $background-color
     border-right: 52px solid $background-color
     z-index: 5
-    border-top-color: transparent
   img
     position: absolute
     top: -30px
@@ -54,7 +54,7 @@
     margin-left: -8px
     z-index: 1
     // WHAT THE FUCK IS THIS
-    clip: rect(0, 112px, 104px, 8px)
+    clip: rect(0, 112px, 120px, 8px)
 
 .hex-text
   h2
